src/objects/Error_Log__c.object
<CustomObject>
    <fields>
        <fullName>Line_Number__c</fullName>
        <label>Line Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Module__c</fullName>
        <label>Module</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Id__c</fullName>
        <label>Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Link__c</fullName>
        <formula>HYPERLINK(&apos;/&apos; &amp; Record_Id__c, &apos;Error Record&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stack_Trace__c</fullName>
        <label>Stack Trace</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Error Log</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ERR-{0000}</displayFormat>
        <label>Error Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>